# CareerBot

./: .gitignore  app.py  package.json  pnpm-lock.yaml  pyproject.toml  readme.md  script.sh
.github/workflows/: deploy-docs.yml
client/: package.json  pnpm-lock.yaml
client/src/: App.tsx  README.md  main.tsx
data/: intents.json  keywords.csv
data/jobs/: AI Specialist.csv  AR Developer.csv  Account Executive.csv  Accounts Payable Clerk.csv  Accounts Receivable Clerk.csv  Aerospace Engineer.csv  Application Support Analyst.csv  Artificial Intelligence Engineer.csv  Automation Engineer.csv  Back-end Developer.csv  Big Data Engineer.csv  Biomedical Engineer.csv  Brand Manager.csv  (+128 more)
database/: README.md  firebase.py
extracted/: 01. PG Reg - R-2019.txt
latex/: .gitignore  README.md
models/: classes.pkl  count_vectorizer.pkl  input_tokenizer.pkl  model.h5  model.keras  target_tokenizer.pkl  words.pkl
notebook/: chat.ipynb  course.ipynb  coursebot.ipynb  extract.ipynb  keywords.ipynb  model.ipynb  remove.ipynb  transpose.ipynb
presentation/: Careerbot.pptx
scraper/: README.md  collect.py  pyproject.toml  test.py
scraper/src/scraper/: __init__.py
scraper/src/scraper/jobs/: __init__.py
scraper/src/scraper/scrapers/: __init__.py  exceptions.py  utils.py
scraper/src/scraper/scrapers/glassdoor/: __init__.py
scraper/src/scraper/scrapers/indeed/: __init__.py
scraper/src/scraper/scrapers/linkedin/: __init__.py
scraper/src/scraper/scrapers/ziprecruiter/: __init__.py
scraper/test/: test.py
src/: README.md
uml/: course.uml  database.uml  skillset.uml
(+62 files in other folders)
