[tool.poetry]
name = "careerbot"
version = "0.1.0"
description = "This is repository contains source code for my final semester project."
authors = ["Siva Prakash <prakashdeveloper@outlook.in>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
scikit-learn = "^1.4.0"
nltk = "^3.8.1"
gradio = "^4.23.0"
jupyterlab = "^4.1.5"
black = "^24.3.0"
tqdm = "^4.66.2"
firebase-admin = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
