[tool.poetry]
name = "scraper"
version = "0.1.0"
description = "Scraper for linkedIn, indeed, glassdoor & ziprecruiter"
authors = ["Siva Prakash"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
tls-client = "^1.0.1"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.1"
numpy = "^1.26.4"
pydantic = "^2.6.2"
html2text = "^2024.2.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
